--- a/public/styles.css
+++ b/public/styles.css
@@ -60,3 +60,29 @@ body {
     transition: 100ms;
   }
   
+  .workout-card {
+    background: white;
+    padding: 15px;
+    margin: 15px auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    text-align: left;
+}
+
+.exercise-list {
+    padding-left: 20px;
+}
+
+.exercise-item {
+    background: #f4f4f4;
+    padding: 8px;
+    margin: 5px 0;
+    border-radius: 5px;
+}
+.workoutTitle{
+  color: black;
+  font-size: 20px;
+  /* align-content: end; */
+  text-align: center;
+}
